# xyo-sdk-rust

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: crates_publish.yml  crates_xyo_http_publish.yml  makefile.yml
example/: Cargo.toml
example/src/: main.rs
src/: client.rs  enrichment.rs  error.rs  lib.rs  main.rs
src/client/: client.rs  config.rs
src/enrichment/: enrichment.rs  mod.rs  service.rs
xyo-http/: Cargo.toml  README.md
xyo-http/src/: lib.rs
