workspace = { members = ["xyo-http"], exclude = ["example"] }
[package]
name = "xyo-sdk"
description = "XYO Financial Official SDK for Rust"
version = "0.1.0"
edition = "2021"
authors = [
    "Hadi Tajallaei <hadi@syniol.com>"
]
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
xyo-http = { version = "0.1.0", path = "xyo-http" }
